--- a/branches/updates-1.0/samples/AdaptiveSample/.classpath
+++ b/branches/updates-1.0/samples/AdaptiveSample/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/PayPalXGAEToolkit-0.1-dev.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/PayPalXGAEToolkit-0.1-dev.jar" sourcepath="D:/updates-1.0/src"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
