--- a/samples/AdaptiveSample/.settings/com.google.gdt.eclipse.core.prefs
+++ b/samples/AdaptiveSample/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,5 @@
-#Thu Mar 18 15:17:26 PDT 2010
+#Fri Nov 12 13:46:47 PST 2010
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+warSrcDir=war
+warSrcDirIsOutput=true
