--- a/trunk/samples/PicMart/war/WEB-INF/web.xml
+++ b/trunk/samples/PicMart/war/WEB-INF/web.xml
@@ -7,17 +7,26 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
 		<servlet-name>PicMart</servlet-name>
 		<servlet-class>com.picmart.PicMartServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PicMart</servlet-name>
+		<url-pattern>/picmart</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>GetPayKey</servlet-name>
+		<servlet-class>com.picmart.GetPayKeyServlet</servlet-class>
+		
 		<init-param>  
 			<param-name>PPAPIUsername</param-name>  
-			<param-value>pd_1265515509_biz_api1.yahoo.com</param-value>  
+			<param-value>ppalav_1285013097_biz_api1.yahoo.com</param-value>  
 		</init-param>
 		<init-param>  
 			<param-name>PPAPIPassword</param-name>  
-			<param-value>1265515515</param-value>  
+			<param-value>1285013102</param-value>  
 		</init-param>
 		<init-param>  
 			<param-name>PPAPISignature</param-name>  
-			<param-value>AFcWxV21C7fd0v3bYYYRCpSSRl31AC1woL3k8kA7-43yk77UeVap4cwO</param-value>  
+			<param-value>AFcWxV21C7fd0v3bYYYRCpSSRl31AeJNr8zWn6wGkU8dNHzEDaF3ZXwz</param-value>  
 		</init-param>
 		<init-param>  
 			<param-name>PPAppID</param-name>  
@@ -25,14 +34,79 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		</init-param>
 		<init-param>  
 			<param-name>PPAccountEmail</param-name>  
-			<param-value>pd_1265515509_biz@yahoo.com</param-value>  
+			<param-value>ppalav_1285013097_biz@yahoo.com</param-value>  
 		</init-param>
+		<init-param>  
+			<param-name>PPEnvironment</param-name>  
+			<param-value>SANDBOX</param-value>  
+		</init-param>
+		
+		<!--
+		<init-param>  
+			<param-name>PPAPIUsername</param-name>  
+			<param-value>ppalavilli_api1.yahoo.com</param-value>  
+		</init-param>
+		<init-param>  
+			<param-name>PPAPIPassword</param-name>  
+			<param-value>WBGGAZ6Q3MWLBWYM</param-value>  
+		</init-param>
+		<init-param>  
+			<param-name>PPAPISignature</param-name>  
+			<param-value>AYgonFny6cb4iAs78aXmrsqOGaBEA8D7OYujCHcj4YiwS6fo  -  - 5tDe3V</param-value>  
+		</init-param>
+		<init-param>  
+			<param-name>PPAppID</param-name>  
+			<param-value>APP-0WT23059P9235501X</param-value>  
+		</init-param>
+		<init-param>  
+			<param-name>PPAccountEmail</param-name>  
+			<param-value>ppalavilli@yahoo.com</param-value>  
+		</init-param>
+		<init-param>  
+			<param-name>PPEnvironment</param-name>  
+			<param-value>PRODUCTION</param-value>  
+		</init-param>
+		-->
+		<!-- 
+	<init-param>
+                        <param-name>PPAPIUsername</param-name>
+                        <param-value>pbehara-seller_api1.paypal.com</param-value>
+                </init-param>
+                <init-param>
+                        <param-name>PPAPIPassword</param-name>
+                        <param-value>4RBWHHL3XHRMQAYQ</param-value>
+                </init-param>
+                <init-param>
+                        <param-name>PPAPISignature</param-name>
+                        <param-value>A.K3XKu4wO3ksZPD75xv82-XSgZtAEf8mKs.qCL8nvj93tztzH-kq1Ol</param-value>
+                </init-param>
+                <init-param>
+                        <param-name>PPAppID</param-name>
+                        <param-value>APP-1JE4291016473214C</param-value>
+                </init-param>
+                <init-param>
+                        <param-name>PPAccountEmail</param-name>
+                        <param-value>pd_1265515509_biz@yahoo.com</param-value>
+                </init-param>
+                <init-param>
+                        <param-name>PPEnvironment</param-name>
+                        <param-value>STAGING</param-value>
+                </init-param>
+	 -->
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>PicMart</servlet-name>
-		<url-pattern>/picmart</url-pattern>
+		<servlet-name>GetPayKey</servlet-name>
+		<url-pattern>/getPayKey</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>PhotoData</servlet-name>
+		<servlet-class>com.picmart.PhotoDataServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PhotoData</servlet-name>
+		<url-pattern>/photodata</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
