--- a/samples/PicMart/.settings/com.google.appengine.eclipse.core.prefs
+++ b/samples/PicMart/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,3 +1,3 @@
-#Tue May 18 07:30:13 PDT 2010
+#Sun May 08 23:11:05 PDT 2011
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.2.6.jar|appengine-api-labs-1.2.6.jar|datanucleus-appengine-1.0.3.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
+filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.4.3.jar|appengine-api-labs-1.4.3.jar|appengine-jsr107cache-1.4.3.jar|jsr107cache-1.1.jar|datanucleus-appengine-1.0.8.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
