--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
   <property name="root.dir" value="." />
   <property name="lib.name" value="PayPalXGAEToolkit"/>
-  <property name="lib.version"   value="0.1-dev"/>
+  <property name="lib.version"   value="1.0"/>
   <property name="src.dir" value="${root.dir}/src" />
   <property name="classes.dir" value="${root.dir}/lib" />
   <property name="dist.dir" value="${root.dir}/dist" />
