updating the classpath for eclipse projects to use the new version of jar file

--- a/samples/PicMart/.classpath
+++ b/samples/PicMart/.classpath
@@ -46,7 +46,7 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gdata-youtube-2.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gdata-youtube-meta-2.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/google-collect-1.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/PayPalXGAEToolkit-0.1-dev.jar" sourcepath="/PayPalXGAEToolkit"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/PayPalXGAEToolkit-1.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
